The name of report creator is now displayed when on view_reports/<id> page

--- a/src/templates/report_details.html
+++ b/src/templates/report_details.html
@@ -32,6 +32,8 @@
             <div class="col-md-6" style="position: relative">
                 <span id="location">{{ location }}</span> <i style="color: green; font-size: large" class="bi bi-geo-alt-fill"></i>
                 <br><br>
+                <span id="user">{{ creator_name }}</span> <i style="color: green; font-size: large" class="bi bi-person-fill"></i>
+                <br><br>
                 <h5>Description of an incident </h5>
                 <div>{{ report.description }}</div>
                 <br><br>
